Fix copy (element can't be invisible)

--- a/_sass/_pmlr.scss
+++ b/_sass/_pmlr.scss
@@ -98,6 +98,7 @@ font-size:75%;
     width: 1px;
     height: 1px;
     border: none;
+    background: $background-color;
 }
 
 .bibbutton {
